1. style update. 2. new post.

--- a/BlogContent/themes/Daily/source/css/_post.scss
+++ b/BlogContent/themes/Daily/source/css/_post.scss
@@ -39,10 +39,11 @@
     list-style: disc;
   }
   blockquote {
-    color: #aaa;
+    color: #333;
     margin: 1em 0;
     padding: 0 0 0 30px;
-    border-left: 4px solid #aaa;
+    border-left: 4px solid #F06292;
+    background-color: #fbfbfb;
   }
   p img {
     display: block;
