- svg icons update.

--- a/BlogContent/themes/Daily/source/css/_daily.scss
+++ b/BlogContent/themes/Daily/source/css/_daily.scss
@@ -480,7 +480,7 @@ Footer
   background-repeat: no-repeat;
   background-size: 100%;
   text-indent: -999em;
-  @each $social in github, weibo, mail, twitter {
+  @each $social in github, wechat, gmail, facebook {
     &.icon-#{$social} {
       background-image: url('../images/#{$social}.svg');
     }
