--- a/BlogContent/themes/Daily/source/css/_nav.scss
+++ b/BlogContent/themes/Daily/source/css/_nav.scss
@@ -61,6 +61,7 @@
       float: left;
       margin-left: 20px;
       a {
+        font-family: -apple-system, BlinkMacSystemFont,"Helvetica Neue","PingFang-SC-Regular","STHeiti", "Helvetica","Arial","Verdana","sans-serif","Microsoft YaHei";
         text-decoration: none;
         line-height: 1.5;
         &:hover {
