--- a/BlogContent/themes/Daily/source/css/_highlight.scss
+++ b/BlogContent/themes/Daily/source/css/_highlight.scss
@@ -15,8 +15,9 @@ pre {
 
 code {
   padding: 0.2em 0.4em;
-  background-color: #efefef;
-  border-radius: 3px;
+  background-color: #FBE9E7;
+  border: 0;
+  color: #E91E63;
 }
 
 pre {
