--- a/BlogContent/themes/Daily/source/css/_post.scss
+++ b/BlogContent/themes/Daily/source/css/_post.scss
@@ -41,9 +41,9 @@
   blockquote {
     color: #333;
     margin: 1em 0;
-    padding: 0 0 0 30px;
-    border-left: 4px solid #F06292;
-    background-color: #fbfbfb;
+    padding: 5px 20px;
+    border-left: 4px solid #1976D2;
+    background-color: #BBDEFB;
   }
   p img {
     display: block;
